// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Genres logic renders genres dropdown chose 1`] = `
<div>
  <button
    className="moviesGrid_categories_item_button"
    data-filter="Genres"
    id="Genres"
    onClick={[Function]}
    style={
      Object {
        "borderBottom": "4px solid",
      }
    }
    type="button"
  >
    <span>
      adventure
    </span>
    <span
      className=" moviesGrid_categories_item_span_arrow"
    />
  </button>
  <div
    className=" moviesGrid_categories_item_block"
    id="genres_list"
  >
    <button
      className="moviesGrid_categories_item_block_button"
      elem="adventure"
      id="adventure"
      onClick={[Function]}
      type="button"
    >
      adventure
    </button>
    <button
      className="moviesGrid_categories_item_block_button"
      elem="action"
      id="action"
      onClick={[Function]}
      type="button"
    >
      action
    </button>
    <button
      className="moviesGrid_categories_item_block_button"
      elem="drama"
      id="drama"
      onClick={[Function]}
      type="button"
    >
      drama
    </button>
  </div>
</div>
`;

exports[`Genres logic renders genres dropdown chose 2`] = `
<div>
  <button
    className="moviesGrid_categories_item_button"
    data-filter="Genres"
    id="Genres"
    onClick={[Function]}
    style={
      Object {
        "borderBottom": "none",
      }
    }
    type="button"
  >
    <span>
      adventure
    </span>
    <span
      className=" moviesGrid_categories_item_span_arrow"
    />
  </button>
  <div
    className=" moviesGrid_categories_item_block"
    id="genres_list"
  >
    <button
      className="moviesGrid_categories_item_block_button"
      elem="adventure"
      id="adventure"
      onClick={[Function]}
      type="button"
    >
      adventure
    </button>
    <button
      className="moviesGrid_categories_item_block_button"
      elem="action"
      id="action"
      onClick={[Function]}
      type="button"
    >
      action
    </button>
    <button
      className="moviesGrid_categories_item_block_button"
      elem="drama"
      id="drama"
      onClick={[Function]}
      type="button"
    >
      drama
    </button>
  </div>
</div>
`;

exports[`Genres logic renders genres dropdown close 1`] = `
<div>
  <button
    className="moviesGrid_categories_item_button"
    data-filter="Genres"
    id="Genres"
    onClick={[Function]}
    style={
      Object {
        "borderBottom": "none",
      }
    }
    type="button"
  >
    <span>
      Genres
    </span>
    <span
      className=" moviesGrid_categories_item_span_arrow"
    />
  </button>
  <div
    className=" moviesGrid_categories_item_block"
    id="genres_list"
  >
    <button
      className="moviesGrid_categories_item_block_button"
      elem="adventure"
      id="adventure"
      onClick={[Function]}
      type="button"
    >
      adventure
    </button>
    <button
      className="moviesGrid_categories_item_block_button"
      elem="action"
      id="action"
      onClick={[Function]}
      type="button"
    >
      action
    </button>
    <button
      className="moviesGrid_categories_item_block_button"
      elem="drama"
      id="drama"
      onClick={[Function]}
      type="button"
    >
      drama
    </button>
  </div>
</div>
`;

exports[`Genres logic renders genres dropdown open 1`] = `
<div>
  <button
    className="moviesGrid_categories_item_button"
    data-filter="Genres"
    id="Genres"
    onClick={[Function]}
    style={
      Object {
        "borderBottom": "4px solid",
      }
    }
    type="button"
  >
    <span>
      Genres
    </span>
    <span
      className="active moviesGrid_categories_item_span_arrow"
    />
  </button>
  <div
    className="active moviesGrid_categories_item_block"
    id="genres_list"
  >
    <button
      className="moviesGrid_categories_item_block_button"
      elem="adventure"
      id="adventure"
      onClick={[Function]}
      type="button"
    >
      adventure
    </button>
    <button
      className="moviesGrid_categories_item_block_button"
      elem="action"
      id="action"
      onClick={[Function]}
      type="button"
    >
      action
    </button>
    <button
      className="moviesGrid_categories_item_block_button"
      elem="drama"
      id="drama"
      onClick={[Function]}
      type="button"
    >
      drama
    </button>
  </div>
</div>
`;

exports[`GenresNavLink Snapshot renders 1`] = `
<Connect(Genres)
  activeClass="undefined"
  fetchChange={[Function]}
  fetchFilmsByGenre={[Function]}
  title="Genres"
/>
`;

exports[`GenresNavLink Snapshot renders 2`] = `
<Connect(Genres)
  activeClass="active"
  fetchChange={[Function]}
  fetchFilmsByGenre={[Function]}
  title="Genres"
/>
`;
